--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Air Quality</string>
     <string name="title_activity_maps">Map</string>
+    <string name="scan">Scan</string>
+    <string name="scanning">Scanning…</string>
+    <string name="history">History</string>
+    <string name="save">Save</string>
+    <string name="ignore">Ignore</string>
 </resources>
